attempt to fix nav alignment issue in editor

--- a/less/widget-navigation.less
+++ b/less/widget-navigation.less
@@ -53,7 +53,7 @@
 
 
 // Hides navigation until toggled
-.extendednavigation.open .navigation-list {
+.template-header .open .extendednavigation .navigation-list {
     display: block;
     // Allows scrolling on mobile
     overflow: auto;
